# regexp-learner

./: .gitignore  .readthedocs.yaml  AUTHORS.md  Angluin.ipynb  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  docs.yml  publish_on_pypi.yml
docs/: Makefile  conf.py  developers.md  index.rst  installation.md
docs/developers/: contributing.md  installation-git.md  tests.md
gold_inference/: gold_infer_automaton.py  gold_observation_table.py
lstar/: automaton.py  automaton_match.py  learner.py  observation_table.py  teacher.py
src/regexp_learner/: __init__.py  strings.py
src/regexp_learner/gold/: __init__.py  gold.py  observation_table.py
src/regexp_learner/lstar/: __init__.py  automaton_match.py  learner.py  observation_table.py  teacher.py
tests/: common.py  test_automaton.py  test_automaton_matching.py  test_gold_infer_automaton.py  test_gold_observation_table.py  test_init.py  test_learner.py  test_observation_table.py  test_strings.py
tests/gold/: test_gold_gold.py  test_gold_observation_table.py
tests/lstar/: test_automaton_matching.py  test_learner.py  test_observation_table.py
