[tool.poetry]
name = "regexp-learner"
version = "0.1.0"
description = "Python3 module providing some algorithms to infer automata and regular expressions.\""
authors = [
    "Marc-Olivier Buob <marc-olivier.buob@nokia-bell-labs.com>",
    "Maxime Raynal <maxime.raynal@nokia.com>",
]
license = "BSD license"
readme = "README.md"
packages = [{include = "src/regexp_learner"}]

# https://docs.pytest.org/en/7.1.x/reference/customize.html
[tool.pytest.ini_options]
pythonpath = "src"
minversion = "7.2.1"
addopts = "--doctest-modules --showlocals --capture=no --exitfirst --failed-first"
testpaths = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.8"
pybgl = ">=0.9.3"
numpy = ">=1.24.2"
ipython = "*"
Sphinx = ">=1.4"
nbsphinx = "*"
sphinx-rtd-theme = "*"
sphinx_mdinclude = "*"
pytest = ">=7.2.2"
setuptools = ">=67.6.1"

[tool.poetry.group.dev.dependencies]
pip = "*"
bump2version = "*"
wheel = "*"
watchdog = "*"
flake8 = "*"
tox = "*"
coverage = "*"
Sphinx = "*"
sphinx-rtd-theme = "*"
sphinx_mdinclude = "*"
twine = "*"
pytest = "*"
pytest-runner = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
