[tool.poetry]
name = "regexp-learner"
version = '1.0.2'
description = "Python3 module providing some algorithms to infer automata and regular expressions."
authors = [
    "Marc-Olivier Buob <marc-olivier.buob@nokia-bell-labs.com>",
    "Maxime Raynal <maxime.raynal@nokia.com>",
]
license = "BSD-3 license"
readme = "README.md"
packages = [{include = "regexp_learner", from = "src"}]
include = ["AUTHORS.md", "CONTRIBUTING.md", "HISTORY.md", "README.md"]

# https://docs.pytest.org/en/7.1.x/reference/customize.html
[tool.pytest.ini_options]
pythonpath = "src"
minversion = "7.2.1"
addopts = "--doctest-modules --showlocals --capture=no --exitfirst --failed-first"
testpaths = [
    "tests"
]

[tool.poetry.dependencies]
python = ">=3.10, <4.0"
pybgl = ">=0.11.1"
numpy = ">=2.2.6"
ipython = ">= 8.10.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = ">=7.2.1"
pytest-runner = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pip = "*"
bump2version = "*"
flake8 = "*"
tox = "*"
coverage = "*"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
pydata-sphinx-theme = "*"
Sphinx = ">=6.0.0"
sphinx_copybutton = "*"
sphinx_mdinclude = "*"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
